# workspaceC

./: .gitignore  CMakeLists.txt  README.md
CPP_copy/: cpp_copy.sln  cpp_copy.vcxproj  main.cpp
CPP_copy/Debug/: cpp_copy.ilk  vc141.idb
CPP_copy/Debug/cpp_copy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpp_copy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
C_01/: Day01.vcxproj
C_01/Debug/: Day01.ilk
C_01/Debug/Day01.tlog/: CL.command.1.tlog  CL.write.1.tlog  Day01.lastbuildstate
C_02/: Day02.cpp  Day02.vcxproj
C_03/: main_fun.cpp  main_struct.cpp
C_04/: DataStore.cpp  DataStore.h  af_console.cpp  af_console.h  main_object.cpp  student.h
C_05/: DataStore.cpp  DataStore.h  main_database.cpp  student.h
C_06/: CmdHandler.h  CmdInput.cpp  CmdInput.h  CmdParser.cpp  CmdParser.h  main_class.cpp
Day01/: Day01.sln  main.cpp
Day01/Debug/: vc141.idb
Day01/Debug/Day01.tlog/: CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Day02/: Day02.sln  Day02.vcxproj.filters
